feat: Complete JWT Authentication System with Full Documentation ✨ Features: - Complete JWT-based authentication & authorization system - Spring Boot 3.3.5 with Spring Security 6 - Role-based access control (ADMIN, MODERATOR, USER) - Refresh token management with multi-device support - Rate limiting & login attempt tracking - Password encryption & security features 🔧 Technical Implementation: - RESTful API with comprehensive error handling - JPA entities with optimized database schema - Swagger/OpenAPI 3 complete documentation - H2 (dev) / MySQL (prod) database support - Docker deployment ready with multi-stage build - Health checks & monitoring endpoints 📚 Documentation: - Complete README.md with API documentation - RUNNING_GUIDE.md for deployment & operations - Docker Compose for full system deployment - MySQL initialization scripts 🔐 Security Features: - JWT token validation & blacklisting - BCrypt password encryption - CORS & CSRF protection - Rate limiting (10 attempts/15min lockout) - Suspicious IP detection 🎯 Ready for Production: - Default accounts: admin/admin123, user/user123 - Swagger UI: http://localhost:8080/swagger-ui.html - Health check: /actuator/health - Full Docker deployment support